<resources>
    <string name="app_name">VoterApp</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="create_user">Create User</string>
    <string name="exit">Exit</string>
    <string name="user_role">User Role</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="vote">Vote</string>
    <string name="result">Result</string>
    <string name="question">Question</string>
    <string name="save_succes">Save Successfully</string>
    <string name="answer">Answer</string>
    <string name="set_answer">Set Answer</string>
    <string name="empty">Empty</string>
    <string name="count_result">%1$s - %2$d%% - %3$s</string>
    <string name="presentase">%1$d%%</string>
    <string name="hi_user">Hai %1$s</string>
    <string name="voters">Voters Count : %1$d</string>
    <string name="zero">0%</string>

    <string-array name="user_role">
        <item>Admin</item>
        <item>User</item>
    </string-array>

    <string-array name="sec_question">
        <item>In what county were you born?</item>
        <item>What was your first car?</item>
        <item>When is your anniversary?</item>
        <item>When is your mother name?</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_vote">User already vote</string>
    <string name="alert_user">Please enter username</string>
    <string name="alert_password">Please enter password</string>
    <string name="wrong_user">Please enter a valid username and password</string>
    <string name="alert_question">Please complete the questionnaire</string>
    <string name="alert_asnwer">Please complete the answer</string>
    <string name="question_constraint">You have already created this question</string>
    <string name="user_contraint">The username you have entered is already registered</string>
    <string name="forget_pass">Forgot Password</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="new_pas">New Password</string>
    <string name="sec_question">Security Question</string>
    <string name="alert_sec_question">Please enter question</string>
    <string name="sec_answer">Security Answer</string>
</resources>
