<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingActivity">

    <TextView
            android:text="@string/setting"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView3"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/textView4"/>

    <EditText
            android:id="@+id/edit_question"
            android:background="@drawable/border_line"
            android:padding="@dimen/small_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/text_title_answer"
            android:text="@string/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_question"
            android:layout_marginTop="16dp"/>

    <ScrollView
            app:layout_constraintBottom_toTopOf="@+id/text_answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_title_answer">

        <LinearLayout
                android:id="@+id/answer_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/button_save"
            android:text="@string/save"
            style="@style/StandardButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

    <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            style="@style/StandardButton"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/button_save"
            app:layout_constraintBottom_toBottomOf="@+id/button_save"/>
</androidx.constraintlayout.widget.ConstraintLayout>