<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateUserActivity">

    <TextView
            android:text="@string/create_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2"/>

    <TextView
            android:id="@+id/text_user"
            android:text="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <EditText
            android:id="@+id/edit_user"
            android:background="@drawable/border_line"
            android:padding="@dimen/small_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_user"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/text_passowrd"
            android:text="@string/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edit_user"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <EditText
            android:id="@+id/edit_password"
            android:background="@drawable/border_line"
            android:padding="@dimen/small_space"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_passowrd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/text_sec_question"
            android:text="@string/sec_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_question"/>

    <TextView
            android:id="@+id/text_sec_answer"
            android:text="@string/sec_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"/>

    <EditText
            android:id="@+id/edit_sec_answer"
            android:background="@drawable/border_line"
            android:padding="@dimen/small_space"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_sec_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>


    <TextView
            android:id="@+id/text_role"
            android:text="@string/user_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_sec_question"/>

    <Spinner
            android:id="@+id/spiner_role"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:entries="@array/user_role"
            android:background="@android:color/holo_blue_light"
            style="@style/spinnerItemStyle"
            android:popupBackground="@android:color/holo_blue_light"
            app:layout_constraintTop_toBottomOf="@+id/text_role"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <Spinner
            android:id="@+id/spinner_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:entries="@array/sec_question"
            android:background="@android:color/holo_blue_light"
            style="@style/spinnerItemStyle"
            android:popupBackground="@android:color/holo_blue_light"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_sec_answer"/>

    <Button
            android:id="@+id/button_save"
            android:text="@string/save"
            style="@style/StandardButton"
            app:layout_constraintTop_toBottomOf="@+id/spiner_role"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            style="@style/StandardButton"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_save"
            app:layout_constraintTop_toTopOf="@+id/button_save"/>

    <Button
            android:id="@+id/button_exit"
            android:text="@string/exit"
            style="@style/StandardButton"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
            app:layout_constraintTop_toTopOf="@+id/button_cancel"
            app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>